--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
